# greeter

./: .gitignore  Cargo.toml  go.mod  justfile
src/: fact.go  fact.rs  main.go  main.rs
src/static/: index.html
static/: index.html
