[package]
name = "greeter"
version = "1.0.1"
edition = "2021"

[dependencies]
axum = { version = "=0.8.1", features = ["macros"] }
rand = "=0.9.0"
serde = { version = "=1.0.219", features = ["derive", "serde_derive"] }
tokio = { version = "=1.44.1", features = ["full"] }
tower-http = { version = "=0.6.2", features = ["trace"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["time", "local-time"] }
uuid = { version = "=1.16.0", features = ["v4"] }
